# 3D-Sorting-Visualizer

./: Cargo.toml  README.md  Trunk.toml  cspell.json  index.html
.cargo/: cargo.toml
.nvim/spell/: en.utf-8.add  en.utf-8.add.spl
docs/: index.html  rust_3d_sorting-a3997c2813b7a939.js  rust_3d_sorting-a82ee2944e71c5d7.js  rust_3d_sorting-e57c9cfc0deb7a4b.js
root/: index.html  rust_3d_sorting-a82ee2944e71c5d7.js
scripts/: gzip_wasm_size.ps1
src/: main.rs
