[package]
name = "rust_3d_sorting"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3" }
console_error_panic_hook = "0.1.7"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[dev-dependencies]  # only for debug builds
bevy = { version = "0.17.3", default-features = false, features = [
  "dynamic_linking",
  "web",
  "webgl2"
] }

## ######################## Bevy Compilation Settings #############################################
# https://bevy.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0
debug = false
codegen-units = 16

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Release Builds #############################################################

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1

[profile.test]
opt-level = 1  # higher = faster runtime. slower compile time.
debug = true
codegen-units = 16

# Development Builds: ########################################################

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"  # optimize for size instead of speed. 'z' optimizes for size even more at cost of performance.
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
